# installer

./: .bumpversion.toml  .envrc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.toml
.github/workflows/: pull-request.yaml  push.yaml
src/github_downloader/: cli.py  constants.py  lib.py  settings.py  utilities.py
src/installer/: __init__.py  apps.py  cli.py  click.py  constants.py  download.py  enums.py  lib.py  settings.py  types.py  utilities.py
src/installer/apps/: cli.py  click.py  constants.py  download.py  lib.py  settings.py
src/installer/clone/: cli.py  lib.py  settings.py
src/installer/configs/: cli.py  click.py  constants.py  lib.py  settings.py
src/tests/: conftest.py  test_apps.py  test_cli.py  test_lib.py  test_main.py  test_utilities.py
src/tests/apps/: test_lib.py
src/tests/clone/: test_lib.py
src/tests/configs/: test_lib.py
