[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

[dependency-groups]
  dev = [
    "dycw-utilities[test]>=0.186.1",
    "orjson>=3.11.5",
    "pyright>=1.1.408",
    "rich>=14.3.1",
  ]

[project]
  authors = [{ email = "d.wan@icloud.com", name = "Derek Wan" }]
  dependencies = [
    "click>=8.3.1",
    "coloredlogs>=15.0.1",
    "dycw-utilities>=0.186.1",
    "inflect>=7.5.0",
    "pydantic>=2.12.5",
    "pygithub>=2.8.1",
    "rich>=14.3.1",
    "shellingham>=1.5.4",
    "tabulate>=0.9.0",
  ]
  description = "Installer"
  name = "dycw-installer"
  readme = "README.md"
  requires-python = ">= 3.12"
  version = "0.5.1"

  [project.optional-dependencies]
    cli = [
      "click==8.3.1",
      "coloredlogs==15.0.1",
      "dycw-utilities==0.186.1",
      "inflect==7.5.0",
      "pydantic==2.12.5",
      "pygithub==2.8.1",
      "rich==14.3.1",
      "shellingham==1.5.4",
      "tabulate==0.9.0",
    ]

  [project.scripts]
    cli = "installer.cli:cli"

[tool]
  [tool.uv]
    [tool.uv.build-backend]
      module-name = "installer"
      module-root = "src"
