[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

[dependency-groups]
  dev = ["dycw-utilities[test]>=0.187.4", "orjson>=3.11.6", "pyright>=1.1.408"]

[project]
  authors = [{ email = "d.wan@icloud.com", name = "Derek Wan" }]
  dependencies = [
    "click>=8.3.1",
    "coloredlogs>=15.0.1",
    "dycw-utilities>=0.187.4",
    "inflect>=7.5.0",
    "pydantic>=2.12.5",
    "pygithub>=2.8.1",
    "shellingham>=1.5.4",
  ]
  description = "Installer"
  name = "dycw-installer"
  readme = "README.md"
  requires-python = ">= 3.12"
  version = "0.6.6"

  [project.optional-dependencies]
    cli = [
      "click==8.3.1",
      "coloredlogs==15.0.1",
      "dycw-utilities==0.187.4",
      "inflect==7.5.0",
      "pydantic==2.12.5",
      "pygithub==2.8.1",
      "shellingham==1.5.4",
    ]

  [project.scripts]
    cli = "installer.cli:cli"

[tool]
  [tool.uv]
    [tool.uv.build-backend]
      module-name = "installer"
      module-root = "src"
